src/index.css
@import url("https://fonts.googleapis.com/css2?family=Codystar:wght@300;400&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=League+Gothic&family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nixie+One&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Quicksand:wght@300..700&display=swap");
@import "tailwindcss";

html,
body,
#root {
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  font-family: "Poppins", sans-serif;
}

.sidebar .active {
  border-radius: 0.75rem;
  overflow: hidden;
  background: white;
}
.sidebar .active p {
  color: black;
}

.sidebar .active img {
  filter: invert();
  background: transparent;
}

.clientMainPage .active {
  border-radius: 0.75rem;
  background: #430209;
  color: white;
  overflow: hidden;
}

@layer utilities {
  .force-rgb * {
    /* Converts Tailwind oklch colors into rgb fallback */
    color-scheme: light;
    background: white !important;
    color: #000 !important;
  }
}

